k8s/apps/tools/cyberchef/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cyberchef
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyberchef
  namespace: cyberchef
  labels:
    app.kubernetes.io/name: cyberchef
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cyberchef
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cyberchef
    spec:
      containers:
        - name: cyberchef
          image: ghcr.io/gchq/cyberchef:10.24.0@sha256:c60691af71c84a2bb34d8a89119808555b6c09070583868443e5fa6f250701b6
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: cyberchef
  namespace: cyberchef
  annotations:
    gatus.home-operations.com/endpoint: |
      alerts:
        - type: pushover
spec:
  selector:
    app.kubernetes.io/name: cyberchef
  ports:
    - port: 80
      targetPort: 80
      name: http
